test_scores/negative_dimers/features/P14868.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P14868.pkl.xz